gccida/g2/extract_bit_field
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1473:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1479:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1480:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1481:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1483:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1483:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1484:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1485:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1490:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1492:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v26; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1497:4: error: expected ';' after expression
rtx fixed_bit_field; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1497:5: error: use of undeclared identifier 'fixed_bit_field'; did you mean 'store_bit_field'?
rtx fixed_bit_field; // r12 
    ^~~~~~~~~~~~~~~
    store_bit_field
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:289:1: note: 'store_bit_field' declared here
store_bit_field (str_rtx, bitsize, bitnum, fieldmode, value, total_size)
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1506:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1509:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v43; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1513:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1522:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v57; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1525:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/expmed.c:1525:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/extract_bit_field/src/obj/expmed.o] Error 1
